--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,8 @@ body{
     top: 50%;
     left: 50%;
     transform:  translate(-50%, -50%);
-    width: 880px;
-    height: 560px;
+    width: 1300px;
+    height: 660px;
     padding: 30px 20px;
     /* box-shadow: 5px 5px 10px #ccc; */
     background: #f5f5f5;
@@ -31,20 +31,19 @@ body{
     width: 180px;
     height: 100%;
     border:  1px solid #ccc;
-    padding: 40px 6px;
+    padding: 40px 5px;
 }
 
 .tabs .tab-header > div {
-    height: 50px;
+    height: 120px;
     line-height: 50px;
     font-size: 15px;
-    font-weight: 600;
+    font-weight: 900;
     text-transform: uppercase;
     cursor: pointer;
     padding-left: 10px;
+    /* background-color: red; */
 
-    CCn,_g=Ar-sW
-   
 }
 
 
@@ -125,7 +124,7 @@ thead {
 th,td 
     {
     border: 2px solid #c6c7cc;
-    padding: 10px 15px;
+    padding: 10px 90px;
 }
 
 
@@ -237,12 +236,18 @@ th,td
   
 .container{
     font-family: "Arial", Helvetica, sans-serif;
-    padding: 30px;
-    color:black;
+
     font-weight: bold;
- 
-    font-size: 5rem;
-    white-space: nowrap;
+
+}
+.container span{
+    
+    border: 1px solid black;
+    margin: -10rem 5rem;
+    padding: 1rem;
+    position: relative;
+    top: 5rem;
+    
 }
 
 
@@ -250,6 +255,7 @@ th,td
 
 .twinger {
     width: 570px;
+    margin: 5rem 14rem;
 }
 
 .twinger .title {
@@ -261,9 +267,18 @@ th,td
 }
 
 
-/* .twinger .title p {
-   margin-top: -2rem;
-} */
+.twinger .title img {
+    margin-left: -20rem;
+    left: 0rem;
+    bottom: -1rem;
+    position: relative;
+  
+}
+.twinger .title span {
+    left: 0rem;
+    top: 3rem;
+    left: 11rem;
+}
 
 .twinger .box {
     border: 1px solid #efefef;
@@ -364,4 +379,51 @@ th,td
 .twinger .typing-area .input-field input:valid ~ button {
     opacity: 1;
     pointer-events: auto;
+}
+
+
+/* Design order section */
+
+.table1 {
+    position: absolute;
+    height: 20rem;
+    width: 12rem;
+    left: 2rem;
+    top: 8rem;
+    /* border: 2px solid brown; */
+    background-color: brown;
+    /* box-shadow: 5px 5px 5px red; */
+
+}
+
+
+.table2 {
+    position: absolute;
+    height: 20rem;
+    width: 12rem;
+    left: 25rem;
+    top: 8rem;
+    /* border: 2px solid rgb(0, 0, 0); */
+    background-color: brown;
+    /* box-shadow: 5px 5px 5px red; */
+}
+
+.table3 {
+    position: absolute;
+    height: 20rem;
+    width: 12rem;
+    left: 45rem;
+    top: 8rem;
+    /* border: 2px solid rgb(0, 0, 0); */
+    background-color: brown;
+    /* box-shadow: 5px 5px 5px red; */
+}
+
+
+/* Order item design */
+
+.orders__item {
+    margin-left: 1rem;
+    margin-top: 4rem;
+    color: white;
 }
