--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,22 @@ body{
     -ms-transform:  translate(-50%, -50%);
     -o-transform:  translate(-50%, -50%);
 }
+.tabs-1{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform:  translate(-50%, -50%);
+    width: 900px;
+    height: 610px;
+    padding: 30px 20px;
+    /* box-shadow: 5px 5px 10px #ccc; */
+    background: #f5f5f5;
+    overflow: hidden;
+    -webkit-transform:  translate(-50%, -50%);
+    -moz-transform:  translate(-50%, -50%);
+    -ms-transform:  translate(-50%, -50%);
+    -o-transform:  translate(-50%, -50%);
+}
 
 
 
@@ -124,7 +140,7 @@ thead {
 th,td 
     {
     border: 2px solid #c6c7cc;
-    padding: 10px 90px;
+    padding: 10px 75px;
 }
 
 
@@ -426,4 +442,113 @@ th,td
     margin-left: 1rem;
     margin-top: 4rem;
     color: white;
+}
+
+
+/* Menu gérante design */
+
+.item-card {
+    width: 180px;
+    height: 100px;
+    padding: 10px;
+    margin: 10px;
+    display: inline-block;
+    border-radius: 5px;
+    background: rgb(204, 198, 198);
+    transition: 0.5s all step-end;
+}
+
+
+.card-top {
+    display: flex;
+    margin: 5px 0;
+    justify-content: space-between;
+}
+
+.fa-heart-o {
+    padding: 6px;
+    border-radius: 50%;
+    background: white;
+    cursor: pointer;
+}
+
+.toggle-heart {
+    background: orangered;
+    color: white;
+}
+
+.rating {
+    padding: 7px;
+    color: goldenrod;
+    background: black;
+    font-size: 14px;
+    border-radius: 15px;
+}
+
+
+.item-card img {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    margin: auto;
+    display: block;
+    margin-bottom: 15px;
+    transition: 0.5s all ease-in-out;
+}
+.item-card a {
+    text-decoration: none;
+    position: relative;
+    top: 50%;
+    font-size: 1.6rem;
+    margin: auto auto;
+    display: block;
+    color: black;
+    cursor: pointer;
+}
+
+.item-card:hover img {
+    transform: scale(1.2);
+}
+
+.item-name {
+    margin: 5px 0;
+    font-weight: 600;
+    color: darkslategray;
+    font-size: 18px;
+}
+
+.item-price {
+    margin: 0;
+    color: rgb(2, 27, 27);
+    font-weight: 500;
+    font-size: 18px;
+}
+
+
+/* Different plats design */
+.item-card-menu {
+    width: 180px;
+    height: 220px;
+    padding: 10px;
+    margin: 10px;
+    display: inline-block;
+    border-radius: 5px;
+    cursor: pointer;
+    background: rgb(204, 198, 198);
+    transition: 0.5s all step-end;
+}
+
+
+.item-card-menu img {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    margin: auto;
+    display: block;
+    margin-bottom: 15px;
+    transition: 0.5s all ease-in-out;
+}
+
+.item-card-menu:hover img {
+    transform: scale(1.2);
 }
