--- a/css/style.css
+++ b/css/style.css
@@ -258,8 +258,8 @@ th,td
 }
 .container span{
     
-    border: 1px solid black;
-    margin: -10rem 5rem;
+    border: 1px solid white;
+    margin: -10rem 4rem;
     padding: 1rem;
     position: relative;
     top: 5rem;
