--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body{
     top: 50%;
     left: 50%;
     transform:  translate(-50%, -50%);
-    width: 1100px;
+    width: 75vw;
     height: 660px;
     padding: 30px 20px;
     /* box-shadow: 5px 5px 10px #ccc; */
@@ -140,7 +140,12 @@ thead {
 th,td 
     {
     border: 2px solid #c6c7cc;
-    padding: 10px 75px;
+    padding: 10px 45px;
+   
+}
+
+td{
+    background-color: white;
 }
 
 
